fix overflow scrolling bugs on AccountDetailsModal

--- a/src/components/Account/AccountOrderDetailsModal.module.css
+++ b/src/components/Account/AccountOrderDetailsModal.module.css
@@ -89,7 +89,7 @@
 }
 
 .orderModalItemList {
-  margin-top: 5rem;
+  padding: 5rem 0;
   list-style: none;
   display: flex;
   flex-direction: column;
